IGNITE-22077 Add more add-opens