@@ -236,6 +236,7 @@
                                 --add-opens=java.base/java.util=ALL-UNNAMED
                                 --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                                 --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+                                --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
                                 --add-opens=java.base/java.lang=ALL-UNNAMED
                                 --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                                 --add-opens=java.base/java.time=ALL-UNNAMED
@@ -270,6 +271,7 @@
                                 <jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
                                 <jvmArg>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</jvmArg>
                                 <jvmArg>--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</jvmArg>
                                 <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
                                 <jvmArg>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</jvmArg>
                                 <jvmArg>--add-opens=java.base/java.time=ALL-UNNAMED</jvmArg>
